<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dadada"
    tools:context=".DeteilContact">

    <androidx.cardview.widget.CardView
        android:id="@+id/image_card1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="1000dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_person"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/name"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/contactName"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/image_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_card1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/image_card"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="12dp"
        android:elevation="86dp"
        android:padding="20dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonrNumber"
            android:textColor="#696970"
            android:textSize="16sp"
            android:textStyle="bold"
            android:translationX="80dp"
            android:translationY="22dp" />

        <TextView
            android:id="@+id/Mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textSize="10sp"
            android:translationX="88dp"
            android:translationY="52dp" />

        <ImageView
            android:id="@+id/vedioIcon"
            android:layout_width="36dp"
            android:layout_height="34dp"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:src="@drawable/ic_baseline_textsms_24" />

        <ImageView
            android:id="@+id/messageIcon"
            android:layout_width="34dp"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="70dp"
            android:src="@drawable/vedio_icon" />

        <ImageView
            android:id="@+id/phoneIcon"
            android:layout_width="36dp"
            android:layout_height="33dp"
            android:src="@drawable/phone"
            android:translationX="18dp"
            android:translationY="22dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/emailCardView"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="14dp"
        android:elevation="86dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_card"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="42dp"
            android:layout_height="32dp"
            android:layout_margin="20dp"
            android:src="@drawable/email" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailAdress"
            android:textColor="#696970"
            android:textSize="12sp"
            android:textStyle="bold"
            android:translationX="90dp"
            android:translationY="22dp" />

        <TextView
            android:id="@+id/personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal"
            android:textSize="10sp"
            android:translationX="90dp"
            android:translationY="38dp" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>